--- a/index.html
+++ b/index.html
@@ -5,119 +5,173 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>babygirl</title>
 
-  <!-- 🎨 Embedded CSS -->
-  <style>
+   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: white;
       margin: 0;
-      padding: 0;
-    }
-
-    h1 span.black {
-      color: black;
-    }
-
-    h1 span.white {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0f0f0f;
       color: white;
     }
 
-    .panel {
-      padding: 20px;
-      margin: 20px;
-      background: #222;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #1a1a1a;
     }
 
-    .panel:hover {
-      transform: scale(1.03);
+    .logo {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #d6a0f4; /* Light Purple */
     }
 
-    .vertical-tabs {
+    .email-form input {
+      padding: 5px;
+      border: none;
+      border-radius: 4px;
+    }
+
+    .email-form button {
+      padding: 6px 10px;
+      margin-left: 5px;
+      background-color: #d6a0f4;
+      border: none;
+      border-radius: 4px;
+      color: #000;
+      cursor: pointer;
+    }
+
+    .container {
+      display: flex;
+      height: 75vh;
+    }
+
+    .sidebar {
+      width: 220px;
+      background-color: #141414;
       display: flex;
       flex-direction: column;
-      max-width: 300px;
+      padding: 10px;
     }
 
-    .vertical-tabs button {
-      padding: 10px;
-      margin: 10px 0;
-      background: #333;
-      border: none;
-      color: white;
+    .tab {
+      padding: 12px;
+      margin: 6px 0;
+      background-color: #1e1e1e;
+      border-left: 4px solid #d6a0f4;
       cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .tab:hover {
+      background-color: #2e2e2e;
+    }
+
+    .main-content {
+      flex-grow: 1;
+      padding: 20px;
+      background-color: #1a1a1a;
+    }
+
+    .tab-section {
+      display: none;
+      padding: 15px;
+      border-radius: 10px;
+      background-color: #2a2a2a;
+    }
+
+    .tab-section.active {
+      display: block;
+    }
+
+    footer {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 15px;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+    }
+
+    .footer-tab {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .footer-tab textarea {
+      resize: none;
+      height: 50px;
+      width: 200px;
+      padding: 5px;
       border-radius: 5px;
+      border: none;
     }
 
-    .horizontal-tab {
-      margin-top: 20px;
-      padding: 10px;
-      background: #444;
-      text-align: center;
-      transition: transform 0.3s ease;
+    .footer-tab input[type="file"] {
+      color: white;
     }
 
-    .horizontal-tab:hover {
-      transform: scale(1.05);
+    .footer-tab button {
+      background-color: #d6a0f4;
+      color: black;
+      padding: 6px 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <!-- 🔥 Header -->
-  <h1><span class="black">baby</span><span class="white">girl</span></h1>
 
-  <!-- 🔐 Email Login Panel -->
-  <div class="panel">
-    <form id="login-form">
-      <label for="email">Enter your email:</label><br />
-      <input type="email" id="email" name="email" required />
-      <button type="submit">Sign In</button>
-    </form>
-  </div>
+  <header>
+    <div class="logo">babygirl</div>
+    <div class="email-form">
+      <input type="email" placeholder="Enter your email..." />
+      <button>Sign In</button>
+    </div>
+  </header>
 
-  <!-- 📑 Introduction Panel -->
-  <div class="panel" id="intro-panel" style="display: none;">
-    <p>Welcome, babygirl. This is your space. You'll find tasks, submit them here, and see how well you did. Be good.</p>
-  </div>
-
-   <main>
-    <aside class="vertical-tabs">
-      <div class="tab" onclick="showPanel('tasks')">📝 Tasks</div>
-      <div class="tab" onclick="showPanel('mind')">💬 What's on our mind?</div>
-      <div class="tab" onclick="showPanel('scoring')">⭐ Scoring</div>
+  <div class="container">
+    <aside class="sidebar">
+      <div class="tab" onclick="showTab('tasks')">📝 Tasks</div>
+      <div class="tab" onclick="showTab('mind')">💬 What's on our mind?</div>
+      <div class="tab" onclick="showTab('scoring')">⭐ Scoring</div>
     </aside>
 
-    <section class="main-content">
-      <div id="tasks" class="panel">Tasklist placeholder</div>
-      <div id="mind" class="panel hidden">Share what's on your mind...</div>
-      <div id="scoring" class="panel hidden">Scoring placeholder</div>
-    </section>
+    <main class="main-content">
+      <section id="tasks" class="tab-section active">Tasklist content goes here...</section>
+      <section id="mind" class="tab-section">What’s on your mind? Share here...</section>
+      <section id="scoring" class="tab-section">Scoring panel, points etc...</section>
+    </main>
+  </div>
 
-    <div class="horizontal-tabs">
-      <div class="tab" onclick="showPanel('feedback')">🗣️ Feedback</div>
-      <div class="tab" onclick="showPanel('submit')">📤 Submit</div>
-      <div class="tab" onclick="showPanel('daily')">📅 Daily Task</div>
+  <footer>
+    <div class="footer-tab">
+      <textarea placeholder="Leave feedback..."></textarea>
+      <button>Send</button>
     </div>
+    <div class="footer-tab">
+      <input type="file" />
+      <button>Upload</button>
+    </div>
+    <div class="footer-tab">
+      <button>Daily Task</button>
+    </div>
+  </footer>
 
-    <section class="bottom-content">
-      <div id="feedback" class="panel hidden">
-        <textarea placeholder="Leave feedback..."></textarea>
-        <button>Send</button>
-      </div>
-      <div id="submit" class="panel hidden">
-        <input type="file" />
-        <button>Upload</button>
-      </div>
-      <div id="daily" class="panel hidden">Today's passive task: Reflect 5 mins 💭</div>
-    </section>
-  </main>
+  <script>
+    function showTab(tabId) {
+      const sections = document.querySelectorAll('.tab-section');
+      sections.forEach(section => {
+        section.classList.remove('active');
+      });
+      document.getElementById(tabId).classList.add('active');
+    }
+  </script>
 
-  <script src="script.js"></script>
-
-  <!-- 🧠 JavaScript -->
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
     // Initialize EmailJS
     (function(){
