--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </aside>
 
     <main class="main-content">
-      <section id="tasks" class="tab-section active">Tasklist content goes here...</section>
+      <section id="tasks" class="tab-section active"><p>one</p> <p> two </p></section>
       <section id="mind" class="tab-section">What’s on your mind? Share here...</section>
       <section id="scoring" class="tab-section">Scoring panel, points etc...</section>
     </main>
