--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 
   <footer>
     <div class="footer-tab">
-      <textarea placeholder="Leave feedback..."></textarea>
-      <button>Send</button>
+      <textarea placeholder="How much do you enjoy the options you have here? Rate them out of 10."></textarea>
+      <button>Let me know.</button>
     </div>
     <div class="footer-tab">
       <input type="file" />
-      <button>Upload</button>
+      <button>Submit yourself here. ;)</button>
     </div>
     <div class="footer-tab">
       <button>Daily Task</button>
