--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
       <button>Submit yourself here. ;)</button>
     </div>
     <div class="footer-tab">
-      <button>Daily Task</button>
+      <button id="daily-task-btn">Find your weekly passive tasks here. 😈</button>
     </div>
+    <div id="daily-popup" class="popup hidden"> As underwear, you are allowed to wear only bras on Monday, Wednesday, Thursday, and Saturday, and only panties every other day. Don't let me down. 😘
+</div>
   </footer>
 
   <script>
