--- a/index.html
+++ b/index.html
@@ -247,16 +247,18 @@
       alert("Clicked on: " + tabName); // Replace with actual tab logic
     }
     // Daily task popup logic
-document.getElementById("daily-task-btn").addEventListener("click", function () {
-  const popup = document.getElementById("daily-popup");
-  popup.classList.remove("hidden");
-  popup.classList.add("show");
+document.addEventListener("DOMContentLoaded", function () {
+  document.getElementById("daily-task-btn").addEventListener("click", function () {
+    const popup = document.getElementById("daily-popup");
+    popup.classList.remove("hidden");
+    popup.classList.add("show");
 
-  // Hide after 5 seconds
-  setTimeout(() => {
-    popup.classList.remove("show");
-    popup.classList.add("hidden");
-  }, 5000);
+    // Hide after 5 seconds
+    setTimeout(() => {
+      popup.classList.remove("show");
+      popup.classList.add("hidden");
+    }, 5000);
+  });
 });
   </script>
 </body>
