--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     }
 
     .popup.hidden {
-      display: none;
-    }
-
+  opacity: 0;
+  pointer-events: none;
+}
     footer {
       display: flex;
       justify-content: space-around;
