--- a/index.html
+++ b/index.html
@@ -198,21 +198,14 @@
       <section id="mind" class="tab-section">
   <p>Select what’s on your mind:</p>
   <ul id="mind-options">
-    <li onclick="showMindMessage('You miss me. You crave instructions. Good girl.')">I miss you</li>
-    <li onclick="showMindMessage('You’re feeling rebellious. Don’t forget who owns you.')">Feeling bratty</li>
-    <li onclick="showMindMessage('You’re calm today. Obedient. That pleases me.')">Feeling calm</li>
+    <li onclick="showMindMessage('Maybe we can have that happen. Dress code might be, well, subject to *change*.')">I think I can work in an interview today. 😈</li>
+    <li onclick="showMindMessage('Good. Call me up when you are fully naked and ready to shower on display for me.)">Maybe I can take you along for a trip to the shower?🚿</li>
+    <li onclick="showMindMessage('Great. Wear a vest and no bra, and anything else you wish to.')">I'd love a little one-on-one video call, maybe.💞</li>
   </ul>
 </section>
       <section id="scoring" class="tab-section">Scoring panel, points etc...</section>
     </main>
   </div>
-<section id="mind" class="tab-section">
-  <div class="mind-option" onclick="showMindMessage('option1')">💖 I feel soft today</div>
-  <div class="mind-option" onclick="showMindMessage('option2')">🔥 I'm feeling naughty</div>
-  <div class="mind-option" onclick="showMindMessage('option3')">💤 I'm feeling tired</div>
-
-  <div id="mind-message" class="popup hidden"></div>
-</section>
   <footer>
     <div class="footer-tab">
       <textarea placeholder="How much do you enjoy the options you have here? Rate them out of 10."></textarea>
