--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <p>Select what’s on your mind:</p>
   <ul id="mind-options">
     <li onclick="showMindMessage('Maybe we can have that happen. Dress code might be, well, subject to *change*.')">I think I can work in an interview today. 😈</li>
-    <li onclick="showMindMessage('Good. Call me up when you are fully naked and ready to shower on display for me.)">Maybe I can take you along for a trip to the shower?🚿</li>
+    <li onclick="showMindMessage('Good. Call me up when you are fully naked and ready to shower on display for me.')">Maybe I can take you along for a trip to the shower?🚿</li>
     <li onclick="showMindMessage('Great. Wear a vest and no bra, and anything else you wish to.')">I'd love a little one-on-one video call, maybe.💞</li>
   </ul>
 </section>
