--- a/index.html
+++ b/index.html
@@ -222,12 +222,13 @@
 </head>
 
 <body>
-  
+
     <div id="intro-screen">
   <h1 class="intro-text">Welcome back, babygirl.</h1>
   <p class="intro-sub">You know the rules. Obey. Submit. Earn.</p>
   <button id="enter-btn">I’m ready.</button>
 </div>
+<div id="main-app" style="display: none;">
   <header>
     <div class="logo">babygirl</div>
     <div class="email-form">
