--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 <body>
 
     <div id="intro-screen">
-  <h1 class="intro-text">Welcome back, babygirl.</h1>
-  <p class="intro-sub">You know the rules. Obey. Submit. Earn.</p>
+  <h1 class="intro-text">Welcome, babygirl.</h1>
+  <p class="intro-sub">You know the rules. Obey. Submit. Please.</p>
   <button id="enter-btn">I’m ready.</button>
 </div>
 <div id="main-app" style="display: none;">
